Parser/k8s/gravity-spy-wiki-bot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gswiki-bot
  name: gswiki-bot
  namespace: gswiki-bot
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gswiki-bot
  template:
    metadata:
      labels:
        app: gswiki-bot
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
        - name: gswiki-bot
          imagePullPolicy: Always
          image: harbor.ischool.syr.edu/gravity-spy/gravity-spy-wiki-bot:v1.0
          #command: ["/app/entrypoint.sh"]
          ports:
          - containerPort: 8000
            protocol: TCP
        - name: tls-sidecar
          image: nginxinc/nginx-unprivileged:latest
          ports:
            - name: https
              containerPort: 8443
              protocol: TCP
          volumeMounts:
            - name: sidecar-config
              mountPath: "/etc/nginx"
              readOnly: true
            - name: sidecar-certs
              mountPath: "/certs"
              readOnly: true
      dnsPolicy: "ClusterFirst"
      dnsConfig:
        nameservers:
          - 10.96.0.10
          - 128.230.108.24
          - 128.230.108.27
      volumes:
        - name: sidecar-config
          configMap:
            name: gswiki-bot-sidecar-configmap
        - name: sidecar-certs
          secret:
            secretName: tls-certs
