Parser/k8s/gravity-spy-wiki-bot-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gswiki-bot-service
  namespace: gswiki-bot
spec:
  selector:
    app: gswiki-bot
  type: NodePort
  ports:
    - port: 8443
      targetPort: 8443
      nodePort: 30720
